fixes to the synonyms

--- a/src/app/bsr/bsr.component.html
+++ b/src/app/bsr/bsr.component.html
@@ -152,15 +152,13 @@
           color="red">
           <mat-icon class="full-icon">phone_iphone</mat-icon>
         </button>
-        <button *ngIf="createPostIt" (click)="diplayFontSizeSlider = !diplayFontSizeSlider" matTooltip="font size"
+      <button *ngIf="createPostIt" (click)="diplayFontSizeSlider = !diplayFontSizeSlider" matTooltip="font size"
           matTooltipPosition="above" mat-icon-button color="warn" aria-label="aria">
           <mat-icon class="full-icon">font_download</mat-icon>
-          <!-- <mat-slider #slider *ngIf="diplayFontSizeSlider" (change)="setFontSize()" [(ngModel)]="font_size"
-              class="slider-font-size" thumbLabel tickInterval="2" min="20" max="38" [value]="font_size"></mat-slider> -->
-          <!-- TODO: The 'tickInterval' property no longer exists -->
-          <mat-slider #slider *ngIf="diplayFontSizeSlider" [(ngModel)]="font_size" class="slider-font-size" thumbLabel
-            min="20" max="38" #ngSlider><input matSliderThumb (change)="setFontSize()"
-              #ngSliderThumb="matSliderThumb" /></mat-slider>
+          <mat-slider #slider *ngIf="diplayFontSizeSlider"  showTickMarks  discrete  (change)="setFontSize()" 
+            class="slider-font-size" thumbLabel tickInterval="2" min="20" max="38">
+            <input matSliderThumb [(ngModel)]="font_size">
+          </mat-slider>
         </button>
         <button *ngIf="createPostIt" (click)="theme()" mat-icon-button matTooltip="toggle theme"
           matTooltipPosition="above">
